--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,5 @@ description = "Modern RTSP client SDK (sync + async)"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.11"
-authors = [{name="Mohamed Elbadry", email=""}]
+authors = [{name="Mohamed Elbadry", email="melbadry9@github.com"}]
 dependencies = [ "pytest", "pytest-asyncio"]
